syntax = "proto3";

package io.grpc.shop;

option java_multiple_files = true;

// The greeting service definition.
service Shop {
  rpc GetPoints(PointsRequest) returns (PointsReply){}
  rpc GetSales(SalesRequest) returns (SalesReply){}
}

// The request message containing the user's name.
message PointsRequest {
  double price = 1;
  double priceModifier = 2;
  string paymentMethod = 3;
  string datetime = 4;
}

// The response message containing the greetings
message PointsReply {
  string finalPrice = 1;
  int32 points = 2;
}


message SalesRequest {
  string startDateTime = 1;
  string endDateTime = 2;
}

// The response message containing the greetings
message SalesReply {
  repeated Sale listOfSales = 1;
}
message Sale{
  string datetime = 1;
  string sales = 2;
  int32 points = 3;
}